<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <kr.go.molit.nhsnes.widget.ActionBarEx
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:text="AMS Message"
        app:titleIcon="@null" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="23dp"
        android:paddingRight="23dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <kr.go.molit.nhsnes.widget.TextViewEx
                style="@style/textViewTitleWhiteSmallAppearance2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ams_message_1" />

            <kr.go.molit.nhsnes.widget.TextViewEx
                style="@style/textViewTitleWhiteSmallAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="FF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <kr.go.molit.nhsnes.widget.TextViewEx
                android:id="@+id/textViewEx2"
                style="@style/textViewTitleWhiteSmallAppearance2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ams_message_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <kr.go.molit.nhsnes.widget.EditTextEx
                        android:id="@+id/et_addr_1"
                        style="@style/textViewTitleWhiteSmallBoxAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:text="RKRRZQZX" />

                    <kr.go.molit.nhsnes.widget.EditTextEx
                        android:id="@+id/et_addr_2"
                        style="@style/textViewTitleWhiteSmallBoxAppearance"
                        android:layout_width="match_parent"

                        android:layout_height="20dp"
                        android:layout_marginBottom="@dimen/dimen_margin_default"
                        android:layout_weight="1"
                        android:text="RKRRZQZX" />

                    <kr.go.molit.nhsnes.widget.EditTextEx
                        android:id="@+id/et_addr_3"
                        style="@style/textViewTitleWhiteSmallBoxAppearance"
                        android:layout_width="match_parent"

                        android:layout_height="20dp"
                        android:layout_marginBottom="@dimen/dimen_margin_default"
                        android:layout_weight="1"
                        android:text="RKRRZQZX" />

                    <kr.go.molit.nhsnes.widget.EditTextEx
                        android:id="@+id/et_addr_4"
                        style="@style/textViewTitleWhiteSmallBoxAppearance"
                        android:layout_width="match_parent"

                        android:layout_height="20dp"
                        android:layout_marginBottom="@dimen/dimen_margin_default"
                        android:layout_weight="1"
                        android:text="RKRRZQZX" />

                    <kr.go.molit.nhsnes.widget.EditTextEx
                        android:id="@+id/et_addr_5"
                        style="@style/textViewTitleWhiteSmallBoxAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginBottom="@dimen/dimen_margin_default"
                        android:layout_weight="1"
                        android:text="RKRRZQZX" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <kr.go.molit.nhsnes.widget.EditTextEx
                        android:id="@+id/et_addr_6"
                        style="@style/textViewTitleWhiteSmallBoxAppearance"
                        android:layout_width="match_parent"

                        android:layout_height="20dp"
                        android:layout_marginBottom="@dimen/dimen_margin_default"
                        android:layout_weight="1"
                        android:text="RKRRZQZX" />

                    <kr.go.molit.nhsnes.widget.EditTextEx
                        android:id="@+id/et_addr_7"
                        style="@style/textViewTitleWhiteSmallBoxAppearance"
                        android:layout_width="match_parent"

                        android:layout_height="20dp"
                        android:layout_marginBottom="@dimen/dimen_margin_default"
                        android:layout_weight="1"
                        android:text="RKRRZQZX" />

                    <kr.go.molit.nhsnes.widget.EditTextEx
                        android:id="@+id/et_addr_8"
                        style="@style/textViewTitleWhiteSmallBoxAppearance"
                        android:layout_width="match_parent"

                        android:layout_height="20dp"
                        android:layout_marginBottom="@dimen/dimen_margin_default"
                        android:layout_weight="1"
                        android:text="RKRRZQZX" />

                    <kr.go.molit.nhsnes.widget.EditTextEx
                        android:id="@+id/et_addr_9"
                        style="@style/textViewTitleWhiteSmallBoxAppearance"
                        android:layout_width="match_parent"

                        android:layout_height="20dp"
                        android:layout_marginBottom="@dimen/dimen_margin_default"
                        android:layout_weight="1"
                        android:text="RKRRZQZX" />

                    <kr.go.molit.nhsnes.widget.EditTextEx
                        android:id="@+id/et_addr_10"
                        style="@style/textViewTitleWhiteSmallBoxAppearance"
                        android:layout_width="match_parent"

                        android:layout_height="20dp"
                        android:layout_marginBottom="@dimen/dimen_margin_default"
                        android:layout_weight="1"
                        android:text="RKRRZQZX" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <kr.go.molit.nhsnes.widget.EditTextEx
                        android:id="@+id/et_addr_11"
                        style="@style/textViewTitleWhiteSmallBoxAppearance"
                        android:layout_width="match_parent"

                        android:layout_height="20dp"
                        android:layout_marginBottom="@dimen/dimen_margin_default"
                        android:layout_weight="1"
                        android:text="RKRRZQZX" />

                    <kr.go.molit.nhsnes.widget.EditTextEx
                        android:id="@+id/et_addr_12"
                        style="@style/textViewTitleWhiteSmallBoxAppearance"
                        android:layout_width="match_parent"

                        android:layout_height="20dp"
                        android:layout_marginBottom="@dimen/dimen_margin_default"
                        android:layout_weight="1"
                        android:text="RKRRZQZX" />

                    <kr.go.molit.nhsnes.widget.EditTextEx
                        android:id="@+id/et_addr_13"
                        style="@style/textViewTitleWhiteSmallBoxAppearance"
                        android:layout_width="match_parent"

                        android:layout_height="20dp"
                        android:layout_marginBottom="@dimen/dimen_margin_default"
                        android:layout_weight="1"
                        android:text="RKRRZQZX" />

                    <kr.go.molit.nhsnes.widget.EditTextEx
                        android:id="@+id/et_addr_14"
                        style="@style/textViewTitleWhiteSmallBoxAppearance"
                        android:layout_width="match_parent"

                        android:layout_height="20dp"
                        android:layout_marginBottom="@dimen/dimen_margin_default"
                        android:layout_weight="1"
                        android:text="RKRRZQZX" />

                    <kr.go.molit.nhsnes.widget.EditTextEx
                        android:id="@+id/et_addr_15"
                        style="@style/textViewTitleWhiteSmallBoxAppearance"
                        android:layout_width="match_parent"

                        android:layout_height="20dp"
                        android:layout_marginBottom="@dimen/dimen_margin_default"
                        android:layout_weight="1"
                        android:text="RKRRZQZX" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <kr.go.molit.nhsnes.widget.EditTextEx
                        android:id="@+id/et_addr_16"
                        style="@style/textViewTitleWhiteSmallBoxAppearance"
                        android:layout_width="match_parent"

                        android:layout_height="20dp"
                        android:layout_marginBottom="@dimen/dimen_margin_default"
                        android:layout_weight="1"
                        android:text="RKRRZQZX" />

                    <kr.go.molit.nhsnes.widget.EditTextEx
                        android:id="@+id/et_addr_17"
                        style="@style/textViewTitleWhiteSmallBoxAppearance"
                        android:layout_width="match_parent"

                        android:layout_height="20dp"
                        android:layout_marginBottom="@dimen/dimen_margin_default"
                        android:layout_weight="1"
                        android:text="RKRRZQZX" />

                    <kr.go.molit.nhsnes.widget.EditTextEx
                        android:id="@+id/et_addr_18"
                        style="@style/textViewTitleWhiteSmallBoxAppearance"
                        android:layout_width="match_parent"

                        android:layout_height="20dp"
                        android:layout_marginBottom="@dimen/dimen_margin_default"
                        android:layout_weight="1"
                        android:text="RKRRZQZX" />

                    <kr.go.molit.nhsnes.widget.EditTextEx
                        android:id="@+id/et_addr_19"
                        style="@style/textViewTitleWhiteSmallBoxAppearance"
                        android:layout_width="match_parent"

                        android:layout_height="20dp"
                        android:layout_marginBottom="@dimen/dimen_margin_default"
                        android:layout_weight="1"
                        android:text="RKRRZQZX" />

                    <kr.go.molit.nhsnes.widget.EditTextEx
                        android:id="@+id/et_addr_20"
                        style="@style/textViewTitleWhiteSmallBoxAppearance"
                        android:layout_width="match_parent"

                        android:layout_height="20dp"
                        android:layout_marginBottom="@dimen/dimen_margin_default"
                        android:layout_weight="1"
                        android:text="RKRRZQZX" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <kr.go.molit.nhsnes.widget.TextViewEx
                    style="@style/textViewTitleWhiteSmallAppearance2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ams_message_3" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinner1"
                        style="@style/SpinnerTheme"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dimen_margin_default"
                        android:layout_weight="1.5"
                        android:spinnerMode="dropdown" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <kr.go.molit.nhsnes.widget.TextViewEx
                    style="@style/textViewTitleWhiteSmallAppearance2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ams_message_4" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <kr.go.molit.nhsnes.widget.TextViewEx
                        style="@style/editTextBlueBoxAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dimen_margin_default"
                        android:text="13 04:46" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <kr.go.molit.nhsnes.widget.TextViewEx
                    style="@style/textViewTitleWhiteSmallAppearance2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ams_message_5" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <kr.go.molit.nhsnes.widget.TextViewEx
                        style="@style/editTextBlueBoxAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="RKSIZPZX" />

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <kr.go.molit.nhsnes.widget.EditTextEx
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="left"
                android:text="(ARR-HL1103-SORAE LCL-RKSS0226)"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <kr.go.molit.nhsnes.widget.TextViewEx
            android:id="@+id/bt_send"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="보내기"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <kr.go.molit.nhsnes.widget.TextViewEx
            android:id="@+id/bt_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="취소"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </LinearLayout>


</LinearLayout>